# luigi-demo

./: .bandit  .env.dev  .env.test  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
docker/: init.sql
luigi_demo/common/: __init__.py  base_task.py  db.py  output_target_enum.py  output_targets.py  status_enum.py  task_exception.py  task_result.py
luigi_demo/models/: weather_data.py  weather_forecast.py
luigi_demo/services/: get_cities.py  get_weather_data.py  store_weather_data.py
luigi_demo/tasks/: get_cities.py  get_cities_task.py  get_weather_data_task.py  store_weather_data_task.py  weather-forecast.py
tests/: conftest.py
tests/tasks/: test_get_cities_task.py  test_get_weather_data_task.py  test_store_weather_data_task.py
